// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders default card in dark theme 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#11161F",
        "borderColor": "rgba(255, 255, 255, 0.08)",
        "borderRadius": 12,
        "borderWidth": 1,
        "elevation": 0,
        "padding": 16,
        "shadowColor": "transparent",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      undefined,
    ]
  }
  testID="card"
>
  <Text>
    card body
  </Text>
</View>
`;

exports[`Card renders default card in light theme 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "rgba(0, 0, 0, 0.08)",
        "borderRadius": 12,
        "borderWidth": 1,
        "elevation": 0,
        "padding": 16,
        "shadowColor": "transparent",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
      undefined,
    ]
  }
  testID="card"
>
  <Text>
    card body
  </Text>
</View>
`;

exports[`Card renders highlighted card with accent border and elevation 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#11161F",
        "borderColor": "#00C2A8",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 3,
        "padding": 24,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.16,
        "shadowRadius": 8,
      },
      undefined,
    ]
  }
  testID="card"
>
  <Text>
    highlighted
  </Text>
</View>
`;
